<resources>
    <string name="app_name">PortfolioApplication</string>

    <string name="nanodegree_apps">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone_project">CAPSTONE: MY OWN APP</string>
    
    <string name="spotifyToast">This will launch the spotify streamer app!</string>
    <string name="scoresToast">This will launch the scores app!</string>
    <string name="libraryToast">This will launch library app!</string>
    <string name="buildToast">This will launch build it bigger app!</string>
    <string name="xyzToast">This will launch the xyz reader app!</string>
    <string name="capstoneToast">This will launch my capstone app!</string>


</resources>
