<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".Portfolio">

    <TextView
        android:id="@+id/nanodegree_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/nanodegree_apps"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/textSize"/>

    <Button
        android:id="@+id/spotifyStreamer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nanodegree_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/orange"
        android:gravity="center"
        android:minWidth="@dimen/minButtonWidth"
        android:paddingLeft="@dimen/buttonLeftPadding"
        android:paddingRight="@dimen/buttonRightPadding"
        android:text="@string/spotify_streamer"/>

    <Button
        android:id="@+id/scoresApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spotifyStreamer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/buttonTopMargin"
        android:background="@color/orange"
        android:gravity="center"
        android:minWidth="@dimen/minButtonWidth"
        android:paddingLeft="@dimen/buttonLeftPadding"
        android:paddingRight="@dimen/buttonRightPadding"
        android:text="@string/scores_app"/>

    <Button
        android:id="@+id/libraryApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoresApp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/buttonTopMargin"
        android:background="@color/orange"
        android:gravity="center"
        android:minWidth="@dimen/minButtonWidth"
        android:paddingLeft="@dimen/buttonLeftPadding"
        android:paddingRight="@dimen/buttonRightPadding"
        android:text="@string/library_app"/>

    <Button
        android:id="@+id/builditBigger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/libraryApp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/buttonTopMargin"
        android:background="@color/orange"
        android:gravity="center"
        android:minWidth="@dimen/minButtonWidth"
        android:paddingLeft="@dimen/buttonLeftPadding"
        android:paddingRight="@dimen/buttonRightPadding"
        android:text="@string/build_it_bigger"/>

    <Button
        android:id="@+id/xyzReader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/builditBigger"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/buttonTopMargin"
        android:background="@color/orange"
        android:gravity="center"
        android:minWidth="@dimen/minButtonWidth"
        android:paddingLeft="@dimen/buttonLeftPadding"
        android:paddingRight="@dimen/buttonRightPadding"
        android:text="@string/xyz_reader"/>

    <Button
        android:id="@+id/capstoneProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/xyzReader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/buttonTopMargin"
        android:background="@color/accent_material_light"
        android:gravity="center"
        android:minWidth="@dimen/minButtonWidth"
        android:paddingLeft="@dimen/buttonLeftPadding"
        android:paddingRight="@dimen/buttonRightPadding"
        android:text="@string/capstone_project"/>

</RelativeLayout>
